--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,7 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Button"
-            android:id="@+id/button3" />
+            android:id="@+id/button3"
+            android:onClick="pressButton3"/>
     </LinearLayout>
 
     <LinearLayout
@@ -46,7 +47,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Button"
-            android:id="@+id/button4" />
+            android:id="@+id/button4"
+            android:onClick="pressButton4"
+            />
 
         <Button
             android:layout_width="wrap_content"
@@ -60,4 +63,10 @@
             android:text="New Button"
             android:id="@+id/button6" />
     </LinearLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
